# babycare_slack_notification

./: .env.example  .gitignore  README.md  collect.py  config.py  graph.py  main.py  pyproject.toml  recommendations.csv  send.py  slack_sender.py  tracker.py
.github/workflows/: collect.yml  send.yml
agents/: __init__.py  dedup.py  formatter.py  researcher.py  state.py  translator.py  validator.py
